# fast-magic-string

./: .npmrc  CHANGELOG.md  Cargo.toml  README.md  benchmark.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  vitest.config.js
.github/workflows/: Bench.yml  CI.yml  Lint.yml  benchmark.yml  build-bindings.yml  ci.yml  codspeed.yml  lint.yml  publish-package.yml  test.yml
__tests__/: FastMagicString.basic.mjs  MagicString.spec.mjs
benches/: bench.mjs
benchmark/: bench.js
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  error.rs  lib.rs  utils.rs
crates/malloc/: Cargo.toml
crates/malloc/src/: lib.rs
crates/node_bindings/: Cargo.toml  README.md  browser.js  index.d.ts  index.js  node_bindings.wasi-browser.js  node_bindings.wasi.cjs  package.json
crates/node_bindings/npm/android-arm-eabi/: README.md  package.json
crates/node_bindings/npm/android-arm64/: README.md  package.json
crates/node_bindings/npm/darwin-arm64/: README.md  package.json
crates/node_bindings/npm/darwin-universal/: README.md  package.json
crates/node_bindings/npm/darwin-x64/: README.md  package.json
crates/node_bindings/npm/freebsd-x64/: README.md  package.json
crates/node_bindings/npm/linux-arm-gnueabihf/: README.md  package.json
crates/node_bindings/npm/linux-arm-musleabihf/: README.md  package.json
crates/node_bindings/npm/linux-arm64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-arm64-musl/: README.md  package.json
crates/node_bindings/npm/linux-riscv64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-x64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-x64-musl/: README.md  package.json
crates/node_bindings/npm/wasm32-wasi/: README.md  package.json
crates/node_bindings/npm/win32-arm64-msvc/: README.md  package.json
crates/node_bindings/npm/win32-ia32-msvc/: README.md  package.json
crates/node_bindings/npm/win32-x64-msvc/: README.md  package.json
crates/node_bindings/src/: error.rs  lib.rs  types.rs
crates/regexp/: Cargo.toml
crates/regexp/src/: lib.rs  napi.rs
crates/sourcemap/: Cargo.toml
crates/sourcemap/src/: error.rs  lib.rs  mappings.rs
crates/utils/: Cargo.toml
crates/utils/src/: concat_string.rs  lib.rs  path.rs
