[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/hai-x/fast-magic-string"


[workspace.dependencies]
napi = { version = "3.0.0-alpha.24" }
napi-build = { version = "2.1.4" }
napi-derive = { version = "3.0.0-alpha.22" }
