[package]
name = "fms_malloc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1" }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
