[package]
name = "fms_node_bindings"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-build = { workspace = true }
napi-derive = { workspace = true }

fast_magic_string = { path = "../core" }
fms_malloc = { path = "../malloc" }
fms_regexp = { path = "../regexp" }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
